Bootstrap heaging styling

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
    
 </head>
 <body>
-       <h2>Bootstrap and JS/jQuery Worksheet</h2>
-       <h2>Week 3 Class Work</h2>
+       <h2 class="display-2">Bootstrap and JS/jQuery Worksheet</h2>
+       <h2 class="display-3">Week 3 Class Work</h2>
+       
        <div></div>
        <div></div>
        <div></div>
