--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <div class="row">
                
        <div class="col firstbox"></div>
-       <div class="col secondbox"></div>
+       <div class="col horizontal_dashed_line"></div>
        <div class="col thirdbox"></div>
 
     </div>
@@ -30,19 +30,44 @@
     </div>
 
        <h3>Change Buttons</h3>
-       <button></button>
-       <button></button>
-       <button></button>
-       <button></button>
+
+       
+    <div class="container1">
+
+        <div class="row1">
+
+       <button class="btn1 firstbutton">Change Box 1</button>
+       <button class="btn2 secondbutton">Change Box 2</button>
+       <button class="btn3 thirdbutton">Change Box 3</button>
+       <button class="btn4 fourthbutton">Change All</button>
+
+    </div>
+
+    </div>
 
        <h4>Hide Buttons</h4>
-       <button></button>
-       <button></button>
-       <button></button>
-       <button></button>
+       <div class="container2">
 
-       <button></button>
-       <button></button>
+           <div class="row2">
+
+       <button class="btn1 Hidebox">Hide Box 1</button>
+       <button class="btn2 Hidebox">Hide Box 2</button>
+       <button class="btn3 Hidebox">Hide Box 3</button>
+       <button class="btn4 Hidebox">Hide All</button>
+    </div>
+
+    </div>
+
+    <div class="container3">
+
+        <div class="row3">
+
+       <button class="btn1 firstbutton">Reset Colors</button>
+       <button class="btn1 firstbutton">Show All</button>
+
+    </div>
+
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
