--- a/index.html
+++ b/index.html
@@ -30,40 +30,41 @@
     </div>
 
        <h3>Change Buttons</h3>
-
        
-    <div class="container1">
+       
+    <div class="container firstcontainter">
 
-        <div class="row1">
+        <div class="row firstrow">
 
-       <button class="btn1 firstbutton">Change Box 1</button>
-       <button class="btn2 secondbutton">Change Box 2</button>
-       <button class="btn3 thirdbutton">Change Box 3</button>
-       <button class="btn4 fourthbutton">Change All</button>
+       <button class="col btn1" type="button">Change Box1</button>
+       <button class="col btn1" type="button">Change Box2</button>
+       <button class="col btn1" type="button">Change Box3</button>
+       <button class="col btn1" type="button">Change All</button>
 
     </div>
 
     </div>
 
        <h4>Hide Buttons</h4>
-       <div class="container2">
 
-           <div class="row2">
+       <div class="container secondcontainer">
 
-       <button class="btn1 Hidebox">Hide Box 1</button>
-       <button class="btn2 Hidebox">Hide Box 2</button>
-       <button class="btn3 Hidebox">Hide Box 3</button>
-       <button class="btn4 Hidebox">Hide All</button>
+           <div class="row secondrow">
+
+       <button class="col btn2 Hidebox">Hide Box 1</button>
+       <button class="col btn2 Hidebox">Hide Box 2</button>
+       <button class="col btn2 Hidebox">Hide Box 3</button>
+       <button class="col btn2 Hidebox">Hide All</button>
     </div>
 
     </div>
 
-    <div class="container3">
+    <div class="container thridcontainer">
 
-        <div class="row3">
+        <div class="row thridrow p-2 bg-light border">
 
-       <button class="btn1 firstbutton">Reset Colors</button>
-       <button class="btn1 firstbutton">Show All</button>
+       <button class="col btn3 firstbutton">Reset Colors</button>
+       <button class="col btn3 firstbutton">Show All</button>
 
     </div>
 
