--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
         <div class="row firstrow">
 
-       <button class="col btn1" type="button">Change Box1</button>
-       <button class="col btn1" type="button">Change Box2</button>
-       <button class="col btn1" type="button">Change Box3</button>
-       <button class="col btn1" type="button">Change All</button>
+       <button class="col firstbtn" type="button">Change Box1</button>
+       <button class="col secondbtn" type="button">Change Box2</button>
+       <button class="col thridbtn" type="button">Change Box3</button>
+       <button class="col fourthbtn" type="button">Change All</button>
 
     </div>
 
@@ -51,10 +51,10 @@
 
            <div class="row secondrow">
 
-       <button class="col btn2 Hidebox">Hide Box 1</button>
-       <button class="col btn2 Hidebox">Hide Box 2</button>
-       <button class="col btn2 Hidebox">Hide Box 3</button>
-       <button class="col btn2 Hidebox">Hide All</button>
+       <button class="col firstbtn Hidebox">Hide Box 1</button>
+       <button class="col secondbtn Hidebox">Hide Box 2</button>
+       <button class="col thirdbtn Hidebox">Hide Box 3</button>
+       <button class="col ourthbtn Hidebox">Hide All</button>
     </div>
 
     </div>
@@ -63,8 +63,8 @@
 
         <div class="row thridrow p-2 bg-light border">
 
-       <button class="col btn3 firstbutton">Reset Colors</button>
-       <button class="col btn3 firstbutton">Show All</button>
+       <button class="col firstbtn resetbutton">Reset Colors</button>
+       <button class="col secondbtn showbutton">Show All</button>
 
     </div>
 
