--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <div class="row firstrow">
 
-       <button class="col firstbtn" type="button">Change Box1</button>
-       <button class="col secondbtn" type="button">Change Box2</button>
-       <button class="col thridbtn" type="button">Change Box3</button>
+       <button class="col firstbtn" type="button">Change Box 1</button>
+       <button class="col secondbtn" type="button">Change Box 2</button>
+       <button class="col thridbtn" type="button">Change Box 3</button>
        <button class="col fourthbtn" type="button">Change All</button>
 
     </div>
@@ -51,10 +51,10 @@
 
            <div class="row secondrow">
 
-       <button class="col firstbtn Hidebox">Hide Box 1</button>
-       <button class="col secondbtn Hidebox">Hide Box 2</button>
-       <button class="col thirdbtn Hidebox">Hide Box 3</button>
-       <button class="col ourthbtn Hidebox">Hide All</button>
+       <button class="col firstbtn" type="hidebox">Hide Box 1</button>
+       <button class="col secondbtn" type="hidebox">Hide Box 2</button>
+       <button class="col thirdbtn" type="hidebox">Hide Box 3</button>
+       <button class="col fourthbtn" type="hidebox">Hide All</button>
     </div>
 
     </div>
@@ -63,8 +63,8 @@
 
         <div class="row thridrow p-2 bg-light border">
 
-       <button class="col firstbtn resetbutton">Reset Colors</button>
-       <button class="col secondbtn showbutton">Show All</button>
+       <button class="col firstbtn" type="resetbutton">Reset Colors</button>
+       <button class="col secondbtn" type="showbutton">Show All</button>
 
     </div>
 
@@ -72,5 +72,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+    
 </body>
 </html>
