chang and hide links active

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
    
 </head>
 <body>
-       <p>Bootstrap and JS/jQuery Worksheet</p>
+    <div class="container title">
+        <div class="row title">
+       <p class="blocktext">Bootstrap and JS/jQuery Worksheet</p>
+
+    </div>
+
+       </div>
+
 
        <h1>Week 3 Class Work</h1>
 
@@ -32,9 +39,9 @@
     
     </div>
 
-    <div  class="container hide">
+    <div  class="container changelink">
         <div class="row">
-        <h3>Hide Button</h3>
+        <h3>Change Button</h3>
     </div>
     </div>
 
@@ -53,7 +60,14 @@
 
     </div>
 
+    <div class="container hidelink">
+
+        </div= class="row hidebutton">
     <h5>Hide Buttons</h5>
+
+    </div>
+
+</div>
 
        <div class="container">
 
