working hide and change links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div  class="container changelink">
         <div class="row">
-        <h3>Change Button</h3>
+        <h3>Change Buttons</h3>
     </div>
     </div>
 
